--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ESNext",
-    "moduleResolution": "bundler",
+    "module": "commonjs",
+    "moduleResolution": "node",
     "lib": ["ES2020"],
-    "declaration": true,
-    "declarationMap": true,
-    "emitDeclarationOnly": true,
-    "outDir": "./dist/types",
+    "declaration": false,
+    "sourceMap": true,
+    "outDir": "./dist/cjs",
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
