--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -4,10 +4,9 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "lib": ["ES2020"],
-    "declaration": true,
-    "declarationMap": true,
-    "emitDeclarationOnly": true,
-    "outDir": "./dist/types",
+    "declaration": false,
+    "sourceMap": true,
+    "outDir": "./dist/esm",
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
